refactor: remove `additionalInformations` field from auth status update request
